--- a/careers.html
+++ b/careers.html
@@ -43,7 +43,7 @@
 
     <section id="career-heading" class="career-heading">
         <h1 class="heading">Career</h1>
-        <p>Job Opening in IT Company. Apply Now!</p>
+        <p>Job Opening in Dye Company. Apply Now!</p>
     </section>
     <div class="career">
         <div class="career-form">
@@ -56,27 +56,27 @@
                 <label class="radio">
                   <input class="radio-one" type="radio" checked="checked" name="status" value="Web Designer">
                   <span class="checkmark"></span>
-                  Web Designer
+                  Researcher
                 </label>
                 <label class="radio">
                   <input class="radio-two" type="radio" name="status" value="Web Developer">
                   <span class="checkmark"></span>
-                  Web Developer
+                 Manager
                 </label>
                 <label class="radio">
                   <input class="radio-three" type="radio" name="status" value="Mobile App Designer">
                   <span class="checkmark"></span>
-                  Mobile App Designer
+                  Dyeing Engineer
                 </label>
                 <label class="radio">
                     <input class="radio-four" type="radio" name="status" value="Mobile App Developer">
                     <span class="checkmark"></span>
-                    Mobile App Developer
+                    Lab Assistant
                   </label>
                 <label class="radio">
                   <input class="radio-five" type="radio"  name="status" value="Digital Marketer">
                   <span class="checkmark"></span>
-                  Digital Marketer
+                  Color Technologist
                 </label>
                 </div>
                 <input type="number" id="experience" name="experience" required placeholder="Years of Experience" class="career-form-experience">
@@ -119,12 +119,12 @@
                     <div class="col-lg-3 col-md-6 footer-contact" style="font-size: 1.5rem;">
                         <h4>Contact Us</h4>
                         <p>
-                            1300  Center Avenue<br>
-                            Fresno, California<br>
-                            United States <br>
-                            <strong>Phone:</strong> +123-456-7890<br>
-                            <strong>Email:</strong> info@example.com<br>
-                        </p>
+                          Khulna University<br>
+                          Khulna, Bangladesh<br>
+                          United States <br>
+                          <strong>Phone:</strong>01917195518<br>
+                          <strong>Email:</strong> info@example.com<br>
+                      </p>
   
                         <div class="social-links">
                             <a href="https://www.facebook.com/"><i class="ion-logo-facebook"></i></a>
@@ -151,7 +151,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 copyright" style="color: #fff; font-size: 1.3rem;">
-                    Copyright &copy; 2021 IT Company Website. All Rights Reserved.
+                    Copyright &copy; 2024 dye Company Website. All Rights Reserved.
                 </div>
             </div>
         </div>
